--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT = 3000
 DATABASE = mongodb://it22137050:ijvi1sSG3UTNxHxn@tutorlink-shard-00-00.9p0ug.mongodb.net:27017,tutorlink-shard-00-01.9p0ug.mongodb.net:27017,tutorlink-shard-00-02.9p0ug.mongodb.net:27017/?replicaSet=atlas-prph4z-shard-0&ssl=true&authSource=admin&retryWrites=true&w=majority&appName=Tutorlink
 Activation_Secret = djksajfdoisoefn12423
-Jwt_Sec = sjsjsjsjsjsjs
+JWT_SECRET=sjsjsjsjsjsjs
 Password = dcbr ccyj tlrp zizn
 Gmail = slmad.clan@gmail.com
