--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "server": "file:",
     "uuid": "^11.1.0"
   }
 }
