--- a/Tutorlink/package.json
+++ b/Tutorlink/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.3",
     "chart.js": "^4.4.9",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.3",
     "tutorlink": "file:"
   },
   "devDependencies": {
