--- a/Tutorlink/package.json
+++ b/Tutorlink/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.3",
     "chart.js": "^4.4.9",
     "jspdf": "^3.0.1",
